--- a/app/templates/pages/page.html
+++ b/app/templates/pages/page.html
@@ -67,6 +67,8 @@
         {% endblock %}
         {% block page_link %}
         {% endblock %}
+        {% block page_person_list %}
+        {% endblock %}
         {% block page_sub_content %}
         {% endblock %}
         {% block page_related_content %}
