--- a/templates/pages/custompage.html
+++ b/templates/pages/custompage.html
@@ -90,6 +90,20 @@
 {% endwith %}
 {% endblock %}
 
+{% block page_person_list %}
+{% with page.custompage.person_list_block.all as person_list_blocks %}
+  {% for person_list_block in person_list_blocks %}
+    {% with person_list_block.person_list_block as person_list_block %}
+    {% with "network/inc/person/list_"|add:person_list_block.style|add:"_style.html" as template %}
+      {% include template %}
+      {% endwith %}
+
+    {% endwith %}
+  {% endfor %}
+{% endwith %}
+
+{% endblock %}
+
 {% block page_sub_content %}
    {% with page.custompage.blocks.all as blocks %}
      {% include "core/inc/block.html" %}
