--- a/static/src/sass/global/_wysiwyg.scss
+++ b/static/src/sass/global/_wysiwyg.scss
@@ -91,3 +91,53 @@ a.wys-button-black-xsmall {
     @include margin(1);
 
 }
+
+a.wys-button-white {
+
+    @extend .button;
+    @extend .button--white;
+
+    .page__block--black & {
+        color: $color-black;
+        &:hover {
+            color: white;
+        }
+    }
+
+    @include margin(1);
+
+}
+
+a.wys-button-white-small {
+
+    @extend .button;
+    @extend .button--white;
+    @extend .button--small;
+
+    .page__block--black & {
+        color: $color-black;
+        &:hover {
+            color: white;
+        }
+    }
+
+    @include margin(1);
+
+}
+
+a.wys-button-white-xsmall {
+
+    @extend .button;
+    @extend .button--white;
+    @extend .button--xsmall;
+
+    .page__block--black & {
+        color: $color-black;
+        &:hover {
+            color: white;
+        }
+    }
+
+    @include margin(1);
+
+}
