--- a/static/src/sass/global/_typography.scss
+++ b/static/src/sass/global/_typography.scss
@@ -57,6 +57,7 @@ p {
 
 		position: relative;
 		z-index: 1;
+		text-decoration: none;
 
 		&:after {
 			@include transition(all 0.15s ease-in-out);
