--- a/templates/core/inc/link.html
+++ b/templates/core/inc/link.html
@@ -1,6 +1,6 @@
 {% load mezzanine_tags %}
 <ul>
 {% for link in links %}
-  <li><img src="{{ link.link_type.picto.url }}" alt="{{ link.link_type.name }}"/><a href="{{ link.url }}" title="">{{ link.url }}</a></li>
+  <li><a class="fa fa-{{ link.link_type.name }}" href="{{ link.url }}" title="">{{ link.url }}</a></li>
 {% endfor %}
 </ul>
