--- a/static/src/sass/global/_buttons.scss
+++ b/static/src/sass/global/_buttons.scss
@@ -5,12 +5,14 @@ $module: ".button";
     border: 0;
     outline: 0;
     background: none;
+    box-sizing: border-box;
+    @include margin(0 .5 0 0);
 
     @include font-size(l);
     @include line-height(1);
     @include typeface(sans-serif);
-    @include padding(.25 1);
-    @include margin(0);
+    @include padding(.25 1 .5 1);
+    //@include margin(0);
     font-weight: weight(light);
 
     background: $color-main;
@@ -20,6 +22,10 @@ $module: ".button";
     cursor: pointer;
 
     @include transition(all 0.25s ease-in-out);
+
+    i {
+        @include margin-right(.25);
+    }
 
     &:hover {
         background: $color-black;
@@ -45,6 +51,7 @@ $module: ".button";
 
         background-color: white;
         color: $color-black;
+        border: 1px solid $color-black;
 
         &:hover {
             background-color: $color-black;
