--- a/app/static/src/sass/modules/_all.scss
+++ b/app/static/src/sass/modules/_all.scss
@@ -12,6 +12,7 @@
 @import 'boxes/article-box';
 @import 'boxes/page-box';
 @import 'boxes/brief-box';
+@import 'boxes/person-list-box';
 
 // Sliders
 @import 'sliders/slider-page';
