--- a/templates/network/inc/person/list_circle_style.html
+++ b/templates/network/inc/person/list_circle_style.html
@@ -54,9 +54,12 @@
 
                                         <h3 class="mt0 fsxl">{{ person }}</h3>
 
-                                        {% if person.description %}
-                                            <p class="fss">{{ person.description|slice:":255" }}</p>
+                                        {% if person.bio %}
+                                            <div class="person-list-box__desc">{{ person.bio|richtext_filters|safe|truncatechars_html:255 }}</div>
+                                        {% elif person.description %}
+                                            <div class="person-list-box__desc">{{ person.description|richtext_filters|safe|truncatechars_html:255 }}</div>
                                         {% endif %}
+
                                         <a href="{{ person.get_absolute_url }}" class="button button--small button--white">{% trans "resume" %}</a>
                                         {% for link in person.links.all %}
                                             {% if link %}
