--- a/app/templates/pages/custompage.html
+++ b/app/templates/pages/custompage.html
@@ -19,6 +19,14 @@
     custompage
 {% endblock %}
 
+{% block body_class %}
+    {% with page.get_ascendants|last as top_level_parent %}
+        {% if top_level_parent.get_content_model.weaving_css_class %}
+        pattern pattern-bg {{ top_level_parent.get_content_model.weaving_css_class }}
+        {% endif %}
+    {% endwith %}
+{% endblock %}
+
 {% block page_title %}
     {% editable page.custompage.title %}
         <h1 class="dotted">{{ page.custompage.title }}</h1>
