--- a/templates/projects/project_detail.html
+++ b/templates/projects/project_detail.html
@@ -55,33 +55,42 @@
   <div>
     {% trans "Project details" %}
 
-    <ul>
-      <li>{% trans "Program" %}></li>
-    </ul>
+    {% if project.program %}
+      {% trans "Program" %} {{ project.program }}<br>
+    {% endif %}
+    {% if project.program_type %}
+      {% trans "Program type" %} {{ project.program_type }}<br>
+    {% endif %}
+    {% trans "Beginning" % } {{ project.date_from }}<br>
+    {% trans "End" % } {{ project.date_to }}<br>
+    {% trans "Status" % } {{ project.project_status }}<br>
+    {% if project.website %}
+      {% trans "Website" %} {{ project.website }}<br>
+    {% endif %}
+  </div>
+  <div>
+    {% trans "Participants" %}
+    {% if project.lead_team %}
+      {% trans "Project lead team"%} {{ project.lead_team }}<br>
+    {% endif %}
+    {% trans "Partners" %}
+    {% if project.teams.all %}
+      {% trans "Partners" %}<br>
+      {% for team in project.teams.all %}
+        {{ team }}<br>
+      {% endfor %}
+      {% for organization in project.organizations.all %}
+        {{ organization }}<br>
+      {% endfor %}
+    {% endif %}
   </div>
 </div>
+{% endblock project_details %}
 
-{% if project.lead_team %}
-  Project lead team : {{ project.lead_team }}<br>
-{% endif %}
-{% if project.persons.all %}
-  Persons :<br>
-  {% for person in project.persons.all %}
-    {{ person }}<br>
-  {% endfor %}
-{% endif %}
-{% if project.teams.all %}
-  Teams :<br>
-  {% for team in project.teams.all %}
-    {{ team }}<br>
-  {% endfor %}
-{% endif %}
-{% if project.organizations.all %}
-  organizations :<br>
-  {% for organization in project.organizations.all %}
-    {{ organization }}<br>
-  {% endfor %}
-{% endif %}
-{% if project.website %}
-  website : {{ project.website }}<br>
-{% endif %}
+{% block logo %}
+{% for organization in project.organizations.all %}
+  {% with project.images.all|get_type:'logo' as images %}
+    {% include 'core/inc/logo.html' %}
+  {% endwith %}
+{% endfor %}
+{% endblock %}
