--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -58,38 +58,45 @@
     {% if project.program %}
       {% trans "Program" %} {{ project.program }}<br>
     {% endif %}
+
     {% if project.program_type %}
       {% trans "Program type" %} {{ project.program_type }}<br>
     {% endif %}
+
     {% trans "Beginning" % } {{ project.date_from }}<br>
     {% trans "End" % } {{ project.date_to }}<br>
     {% trans "Status" % } {{ project.project_status }}<br>
+
     {% if project.website %}
       {% trans "Website" %} {{ project.website }}<br>
     {% endif %}
+
+    {% with project.images.all|get_type:'logo' as images %}
+      {% include 'core/inc/logo.html' %}
+    {% endwith %}
   </div>
   <div>
     {% trans "Participants" %}
+
     {% if project.lead_team %}
       {% trans "Project lead team"%} {{ project.lead_team }}<br>
     {% endif %}
+
     {% trans "Partners" %}
-    {% if project.teams.all %}
-      {% trans "Partners" %}<br>
-      {% for team in project.teams.all %}
-        {{ team }}<br>
-      {% endfor %}
-      {% for organization in project.organizations.all %}
-        {{ organization }}<br>
-      {% endfor %}
-    {% endif %}
+
+    {% for team in project.teams.all %}
+      {{ team }}<br>
+    {% endfor %}
+    {% for organization in project.organizations.all %}
+      {{ organization }}<br>
+    {% endfor %}
   </div>
 </div>
 {% endblock project_details %}
 
 {% block logo %}
 {% for organization in project.organizations.all %}
-  {% with project.images.all|get_type:'logo' as images %}
+  {% with organization.images.all|get_type:'logo' as images %}
     {% include 'core/inc/logo.html' %}
   {% endwith %}
 {% endfor %}
