--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -53,7 +53,7 @@
 {% block page_related_content %}
 <div>
   <div>
-    {% trans "Project details" %}
+    {% trans "Project details" %}<br>
 
     {% if project.program %}
       {% trans "Program" %} {{ project.program }}<br>
@@ -63,9 +63,9 @@
       {% trans "Program type" %} {{ project.program_type }}<br>
     {% endif %}
 
-    {% trans "Beginning" % } {{ project.date_from }}<br>
-    {% trans "End" % } {{ project.date_to }}<br>
-    {% trans "Status" % } {{ project.project_status }}<br>
+    {% trans "Beginning" %} {{ project.date_from }}<br>
+    {% trans "End" %} {{ project.date_to }}<br>
+    {% trans "Status" %} {{ project.project_status }}<br>
 
     {% if project.website %}
       {% trans "Website" %} {{ project.website }}<br>
