--- a/app/templates/projects/project_detail.html
+++ b/app/templates/projects/project_detail.html
@@ -76,7 +76,7 @@
     {% endwith %}
   </div>
   <div>
-    {% trans "Participants" %}
+    {% trans "Participants" %}<br>
 
     {% if project.lead_team %}
       {% trans "Project lead team"%} {{ project.lead_team }}<br>
