--- a/app/static/src/sass/global/_wysiwyg.scss
+++ b/app/static/src/sass/global/_wysiwyg.scss
@@ -8,7 +8,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -23,7 +23,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -38,7 +38,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -54,7 +54,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -71,7 +71,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -88,7 +88,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -104,7 +104,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -121,7 +121,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
@@ -138,7 +138,7 @@
         }
     }
 
-    @include margin(1);
+    @include margin(0 .5 0 0);
 
 }
 
